snaplogger (1.0.44.0~bionic) bionic; urgency=high

  * Load snaplogger plugins if any are found.
  * Added the `--logger-plugin-paths` option.
  * Added variable APPENDER_FACTORY_DEBUG to see when appenders get loaded.
  * Added the `--list-appenders` command.
  * Added some documentation.
  * Various cleanups.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 07 Mar 2022 17:51:46 -0800

snaplogger (1.0.43.0~bionic) bionic; urgency=high

  * Added the Environment Variable Into.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 21:15:03 -0800

snaplogger (1.0.42.0~bionic) bionic; urgency=high

  * Added function to allow stringstream's to be logged as is.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 16 Feb 2022 10:57:02 -0800

snaplogger (1.0.41.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Feb 2022 13:31:27 -0800

snaplogger (1.0.41.0~bionic) bionic; urgency=high

  * Added another test of the size, in case the logrotate failed.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Feb 2022 23:24:16 -0800

snaplogger (1.0.40.0~bionic) bionic; urgency=high

  * Added the maximum_size=... to avoid breaking disk drives.
  * Added the on_overflow=... to define an action in case the maximum-size
    is reached.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Feb 2022 22:59:52 -0800

snaplogger (1.0.39.0~bionic) bionic; urgency=high

  * Added a fallback_to_syslog=... option for file appenders.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 20 Dec 2021 21:39:25 -0800

snaplogger (1.0.38.0~bionic) bionic; urgency=high

  * Updated main test to use new libexcept stack trace setup.
  * Added documentation about the network feature (found in eventdispatcher).

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 28 Aug 2021 18:37:21 -0700

snaplogger (1.0.37.0~bionic) bionic; urgency=high

  * Added the boot_id system variable.
  * Added a few missing guards in the appender.