@@ -4,6 +4,7 @@ snaplogger (1.0.44.0~bionic) bionic; urgency=high
   * Added the `--logger-plugin-paths` option.
   * Added variable APPENDER_FACTORY_DEBUG to see when appenders get loaded.
   * Added the `--list-appenders` command.
+  * Added a function to change the timestamp.
   * Added some documentation.
   * Various cleanups.
 
